# bedrock-protocol-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  index.html
bots/: bot.cpp
cmake/: BedrockProtocolConfig.cmake.in
data/: client_data_template.json
data/minecraft-data/bedrock/: manifest.json
data/minecraft-data/bedrock/1.20.0/: protocol.json
data/minecraft-data/bedrock/1.20.10/: protocol.json
data/minecraft-data/bedrock/1.20.30/: protocol.json
data/minecraft-data/bedrock/1.20.40/: protocol.json
data/minecraft-data/bedrock/1.20.50/: protocol.json
data/minecraft-data/bedrock/1.20.61/: protocol.json
data/minecraft-data/bedrock/1.26.10/: patch_move_player_12610.js  patch_move_player_12610_fixed.js  protocol.json
docs/: BOT_PACKETS.md  GETTING_STARTED.md  MAINTENANCE.md  PACKETS.md  PARITY_ROADMAP.md  RELAY.md  VERSIONS.md  index.html  index.md
documentation/: BOT_PACKETS.md  GETTING_STARTED.md  MAINTENANCE.md  PACKETS.md  PARITY_ROADMAP.md  RELAY.md  VERSIONS.md
examples/: medium_bot.cpp  packet_event_bot.cpp  proxy_relay.cpp  relay_packet_bot.cpp  relay_test_server.cpp  simple_create_client_bot.cpp  simple_server.cpp
examples/external_bot/: CMakeLists.txt  main.cpp
include/bedrock/: BedrockCpp.hpp  BedrockEncryption.hpp  BedrockFramer.hpp  BedrockKeyExchange.hpp  BedrockProtocol.hpp  BedrockProtocolCpp.hpp  BinaryStream.hpp  Client.hpp  LoginPacket.hpp  Packet.hpp  PacketFromEvent.hpp  RakNetConnect.hpp  RakNetPing.hpp  bedrock.hpp
include/bedrock/api/: Client.hpp
include/bedrock/auth/: BedrockAuthJwt.hpp  BedrockClientDataBuilder.hpp  XboxAuthCache.hpp  XboxLiveAuth.hpp  XboxProfileCache.hpp  XboxTokenCache.hpp
include/bedrock/bot/: BedrockBot.hpp
include/bedrock/client/: BedrockClient.hpp  BedrockClientCodecPipeline.hpp  BedrockClientPipeline.hpp  BedrockClientProtocol.hpp  BedrockClientSession.hpp  BedrockNetworkClient.hpp  RakNetClient.hpp  VersionedClientSession.hpp
include/bedrock/debug/: PacketFieldDecoder.hpp  PacketInspector.hpp  PacketSchemaTsvIndex.hpp  ProtocolSchemaIndex.hpp  ProtocolTypeTsvIndex.hpp
include/bedrock/events/: BedrockPacket.hpp  BedrockPacketEmitter.hpp  BedrockPacketEvent.hpp  BedrockPacketEventAdapter.hpp  BedrockPacketEventDispatcher.hpp  BedrockPacketObjectAdapter.hpp  BedrockPacketPrinter.hpp  PacketEventApi.hpp  PacketEventBus.hpp
include/bedrock/protocol/: BatchCodec.hpp  BedrockClientRuntime.hpp  BedrockPacketIO.hpp  BedrockProtocolClient.hpp  ClientRuntime.hpp  GamePacket.hpp  GamePacketCodec.hpp  GeneratedProtocolRegistry.hpp  PacketCodec.hpp  PacketDispatcher.hpp  PacketFactory.hpp  PacketIO.hpp  PacketPayloadReader.hpp  PacketRegistry.hpp  ProtocolDefinition.hpp  TypedPacketDispatcher.hpp  VersionedBatchCodec.hpp  VersionedMcpeCodec.hpp  VersionedPacketCodec.hpp  VersionedPayloadReader.hpp
include/bedrock/protodef/: ProtoDefContext.hpp  ProtoDefDecoder.hpp  ProtoDefEncoder.hpp  ProtoDefField.hpp  ProtoDefJson.hpp  ProtoDefPacketDecoder.hpp  ProtoDefPacketEncoder.hpp  ProtoDefReader.hpp  ProtoDefValue.hpp  ProtoDefWriter.hpp
include/bedrock/relay/: BedrockLiveRelay.hpp  BedrockRelay.hpp
include/bedrock/server/: BedrockServer.hpp  RakNetServer.hpp
include/bedrock/util/: BinaryStream.hpp  VarInt.hpp
include/bedrock/world/: BedrockChunk.hpp  BlockRuntimeRegistry.hpp  BlockRuntimeRegistryLoader.hpp  LevelChunk.hpp  LevelChunkView.hpp  MinecraftDataAssets.hpp  MinecraftDataIndex.hpp  MinecraftDataPathResolver.hpp  PalettedStorage.hpp  SubChunk.hpp  WorldScanner.hpp  WorldView.hpp
relay/: proxy_relay.cpp
scripts/: build.ps1  build.sh  generate_block_runtime_tsv.py  generate_packet_schema_tsv.py  generate_protocol_type_schema_tsv.py  vendor_minecraft_data.sh
src/: BedrockEncryption.cpp  BedrockFramer.cpp  BedrockKeyExchange.cpp  BinaryStream.cpp  LoginPacket.cpp  RakNetConnect.cpp  RakNetPing.cpp
src/auth/: BedrockAuthJwt.cpp  BedrockClientDataBuilder.cpp  XboxLiveAuth.cpp
src/client/: BedrockClientProtocol.cpp  BedrockNetworkClient.cpp  RakNetClient.cpp
src/events/: BedrockPacketEventAdapter.cpp
src/protocol/: BatchCodec.cpp  BedrockClientRuntime.cpp  BedrockPacketIO.cpp  BedrockProtocolClient.cpp  GamePacketCodec.cpp  GeneratedProtocolRegistry.cpp  PacketDispatcher.cpp  PacketFactory.cpp  PacketPayloadReader.cpp  PacketRegistry.cpp  TypedPacketDispatcher.cpp  VersionedMcpeCodec.cpp
src/relay/: BedrockLiveRelay.cpp
src/server/: RakNetServer.cpp
src/util/: BinaryStream.cpp  VarInt.cpp
src/world/: BedrockChunk.cpp
tools/: bedrock.cpp  bedrock_ping.cpp  bot.cpp  chunk_smoke.cpp  generate_protocol_tables.js  live_relay_smoke.cpp  login.cpp  network_client_smoke.cpp  protocol_roundtrip.cpp  raknet_client_smoke.cpp  raknet_server_smoke.cpp  session.cpp  xbox-login.cpp
